chore(Input): fix placeholder align in IE

--- a/packages/retail-ui/components/Input/Input.common.less
+++ b/packages/retail-ui/components/Input/Input.common.less
@@ -135,8 +135,6 @@
   }
 
   .placeholder {
-    display: flex;
-    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
